ffi/include/int2dds-ffi.h

typedef struct Int2DdsDynamicData Int2DdsDynamicData;
/**
 * Opaque, owning handle wrapping a [`DynamicValue`].
 */
typedef struct Int2DdsDynamicValue Int2DdsDynamicValue;
/**
 * FFI return codes
 */
typedef int32_t Int2DdsRet;
/**
 * Insert a key/value pair into a map value. Consumes `key` and `value` on
 * success; on error both are left owned by the caller.
 */
Int2DdsRet int2dds_dynamic_value_map_insert(struct Int2DdsDynamicValue *map,
                                            struct Int2DdsDynamicValue *key,
                                            struct Int2DdsDynamicValue *value);
/**
 * Destroy a value handle. Safe to call with null.
 */
void int2dds_dynamic_value_destroy(struct Int2DdsDynamicValue *value);
/**
 * Report the kind of a value (one of the `INT2DDS_VALUE_KIND_*` constants).
 */
Int2DdsRet int2dds_dynamic_value_kind(const struct Int2DdsDynamicValue *value, int32_t *out);
/**
 * Read a char8 value as its byte value.
 */
Int2DdsRet int2dds_dynamic_value_as_char8(const struct Int2DdsDynamicValue *value, uint8_t *out);
/**
 * Read a string or wide-string value into `buf`.
 */
Int2DdsRet int2dds_dynamic_value_as_string(const struct Int2DdsDynamicValue *value,
                                           char *buf,
                                           uintptr_t buf_len,
                                           uintptr_t *out_len);
/**
 * Format any value as a human-readable string into `buf`, regardless of kind
 * (mirrors the core `Display`).
 */
Int2DdsRet int2dds_dynamic_value_to_string(const struct Int2DdsDynamicValue *value,
                                           char *buf,
                                           uintptr_t buf_len,
                                           uintptr_t *out_len);
/**
 * Read an enum value's literal name into `buf` and its numeric value into
 * `out_value`.
 */
Int2DdsRet int2dds_dynamic_value_as_enum(const struct Int2DdsDynamicValue *value,
                                         char *buf,
                                         uintptr_t buf_len,
                                         uintptr_t *out_len,
                                         int32_t *out_value);
/**
 * Read a bitmask value's packed bits.
 */
Int2DdsRet int2dds_dynamic_value_as_bitmask(const struct Int2DdsDynamicValue *value, uint64_t *out);
/**
 * Read a bitset value's packed bitfields.
 */
Int2DdsRet int2dds_dynamic_value_as_bitset(const struct Int2DdsDynamicValue *value, uint64_t *out);
/**
 * Element count of a sequence/array/map value.
 */
Int2DdsRet int2dds_dynamic_value_len(const struct Int2DdsDynamicValue *value, uintptr_t *out);
/**
 * Clone the element at `index` of a sequence/array value.
 */
Int2DdsRet int2dds_dynamic_value_element(const struct Int2DdsDynamicValue *value,
                                         uintptr_t index,
                                         struct Int2DdsDynamicValue **out);
/**
 * Clone the key of the map entry at `index`.
 */
Int2DdsRet int2dds_dynamic_value_map_key(const struct Int2DdsDynamicValue *value,
                                         uintptr_t index,
                                         struct Int2DdsDynamicValue **out);
/**
 * Clone the value of the map entry at `index`.
 */
Int2DdsRet int2dds_dynamic_value_map_value(const struct Int2DdsDynamicValue *value,
                                           uintptr_t index,
                                           struct Int2DdsDynamicValue **out);
/**
 * Clone a nested struct value into a new DynamicData handle. Destroy it with
 * `int2dds_dynamic_data_destroy`.
 */
Int2DdsRet int2dds_dynamic_value_as_struct(const struct Int2DdsDynamicValue *value,
                                           struct Int2DdsDynamicData **out);
/**
 * Clone a union value's discriminator into a new value handle.
 */
Int2DdsRet int2dds_dynamic_value_union_discriminator(const struct Int2DdsDynamicValue *value,
                                                     struct Int2DdsDynamicValue **out);
/**
 * Clone a union value's selected branch value into a new value handle.
 */
Int2DdsRet int2dds_dynamic_value_union_value(const struct Int2DdsDynamicValue *value,
                                             struct Int2DdsDynamicValue **out);
/* DynamicValue scalar extractors (macro-generated; manually declared). */
Int2DdsRet int2dds_dynamic_value_as_bool (const struct Int2DdsDynamicValue *value, bool     *out);
Int2DdsRet int2dds_dynamic_value_as_i8   (const struct Int2DdsDynamicValue *value, int8_t   *out);
Int2DdsRet int2dds_dynamic_value_as_i16  (const struct Int2DdsDynamicValue *value, int16_t  *out);
Int2DdsRet int2dds_dynamic_value_as_i32  (const struct Int2DdsDynamicValue *value, int32_t  *out);
Int2DdsRet int2dds_dynamic_value_as_i64  (const struct Int2DdsDynamicValue *value, int64_t  *out);
Int2DdsRet int2dds_dynamic_value_as_u8   (const struct Int2DdsDynamicValue *value, uint8_t  *out);
Int2DdsRet int2dds_dynamic_value_as_u16  (const struct Int2DdsDynamicValue *value, uint16_t *out);
Int2DdsRet int2dds_dynamic_value_as_u32  (const struct Int2DdsDynamicValue *value, uint32_t *out);
Int2DdsRet int2dds_dynamic_value_as_u64  (const struct Int2DdsDynamicValue *value, uint64_t *out);
Int2DdsRet int2dds_dynamic_value_as_f32  (const struct Int2DdsDynamicValue *value, float    *out);
Int2DdsRet int2dds_dynamic_value_as_f64  (const struct Int2DdsDynamicValue *value, double   *out);