csharp/src/Int2Dds/Interop/NativeMethods.DynamicValue.cs


        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_map_insert(IntPtr map, IntPtr key, IntPtr value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern void int2dds_dynamic_value_destroy(IntPtr value);

        // --- DynamicValue inspectors ---

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_kind(IntPtr value, out int kind_out);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_bool(IntPtr value, out byte out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_i8(IntPtr value, out sbyte out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_i16(IntPtr value, out short out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_i32(IntPtr value, out int out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_i64(IntPtr value, out long out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_u8(IntPtr value, out byte out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_u16(IntPtr value, out ushort out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_u32(IntPtr value, out uint out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_u64(IntPtr value, out ulong out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_f32(IntPtr value, out float out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_f64(IntPtr value, out double out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_char8(IntPtr value, out byte out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static unsafe extern int int2dds_dynamic_value_as_string(IntPtr value, byte* buf, UIntPtr buf_len, out UIntPtr out_len);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static unsafe extern int int2dds_dynamic_value_to_string(IntPtr value, byte* buf, UIntPtr buf_len, out UIntPtr out_len);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static unsafe extern int int2dds_dynamic_value_as_enum(IntPtr value, byte* buf, UIntPtr buf_len, out UIntPtr out_len, out int out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_bitmask(IntPtr value, out ulong out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_bitset(IntPtr value, out ulong out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_len(IntPtr value, out UIntPtr len_out);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_element(IntPtr value, UIntPtr index, out IntPtr out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_map_key(IntPtr value, UIntPtr index, out IntPtr out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_map_value(IntPtr value, UIntPtr index, out IntPtr out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_as_struct(IntPtr value, out IntPtr data_out);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_union_discriminator(IntPtr value, out IntPtr out_value);

        [DllImport("int2dds_ffi", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int int2dds_dynamic_value_union_value(IntPtr value, out IntPtr out_value);
    }
}
